--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = unzip
-url = ftp://ftp.info-zip.org/pub/infozip/src/unzip60.tgz
+url = https://cfhcable.dl.sourceforge.net/project/infozip/UnZip%206.x%20%28latest%29/UnZip%206.0/unzip60.tar.gz
 archives = 
 giturl = 
 
@@ -21,6 +21,8 @@ broken_parallel_build = false
 compat = false
 # set conservative build flags
 conservative_flags = false
+# dev package requires the extras to be installed
+dev_requires_extras = false
 # pass -ffast-math to compiler
 fast-math = false
 # optimize build for speed over size
