unzip: Fix for CVE-2019-13232
CVEs fixed in this build:
CVE-2019-13232

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = unzip
-url = https://cfhcable.dl.sourceforge.net/project/infozip/UnZip%206.x%20%28latest%29/UnZip%206.0/unzip60.tar.gz
+url = https://sourceforge.net/projects/infozip/files/UnZip%206.x%20%28latest%29/UnZip%206.0/unzip60.tar.gz
 archives = 
 giturl = 
 
